@@ -119,6 +119,8 @@ def VIEWLISTOFEPISODESFORSHOW(url,name):
         episodeNum = int(mfSubset.get("EpisodeNumber"))
         studio = mfSubset.get("AiringChannelName")
         isFavorite = mfSubset.get("IsFavorite")
+        watchedDuration = mfSubset.get("WatchedDuration")
+        isWatched = mfSubset.get("IsWatched")
         
         startTime = float(mfSubset.get("AiringStartTime") // 1000)
         strAiringdateObject = date.fromtimestamp(startTime)
@@ -151,7 +153,7 @@ def VIEWLISTOFEPISODESFORSHOW(url,name):
         strFilepath = mfSubset.get("SegmentFiles")[0]
         
         imageUrl = strUrl + "/sagex/media/poster/" + strMediaFileID
-        addMediafileLink(strDisplayText,filemap(strFilepath),strDescription,imageUrl,strGenre,strOriginalAirdate,strAiringdate,strTitle,strMediaFileID,strAiringID,seasonNum,episodeNum,studio,isFavorite)
+        addMediafileLink(strDisplayText,filemap(strFilepath),strDescription,imageUrl,strGenre,strOriginalAirdate,strAiringdate,strTitle,strMediaFileID,strAiringID,seasonNum,episodeNum,studio,isFavorite,isWatched)
 
     xbmc.executebuiltin("Container.SetViewMode(504)")
 
@@ -310,6 +312,8 @@ def SEARCHFORRECORDINGS(url,name):
         episodeNum = int(mfSubset.get("EpisodeNumber"))
         studio = mfSubset.get("AiringChannelName")
         isFavorite = mfSubset.get("IsFavorite")
+        watchedDuration = mfSubset.get("WatchedDuration")
+        isWatched = mfSubset.get("IsWatched")
         
         startTime = float(mfSubset.get("AiringStartTime") // 1000)
         strAiringdateObject = date.fromtimestamp(startTime)
@@ -340,7 +344,7 @@ def SEARCHFORRECORDINGS(url,name):
         strFilepath = mfSubset.get("SegmentFiles")[0]
         
         imageUrl = strUrl + "/sagex/media/poster/" + strMediaFileID
-        addMediafileLink(strDisplayText,filemap(strFilepath),strDescription,imageUrl,strGenre,strOriginalAirdate,strAiringdate,strTitle,strMediaFileID,strAiringID,seasonNum,episodeNum,studio,isFavorite)
+        addMediafileLink(strDisplayText,filemap(strFilepath),strDescription,imageUrl,strGenre,strOriginalAirdate,strAiringdate,strTitle,strMediaFileID,strAiringID,seasonNum,episodeNum,studio,isFavorite,isWatched)
 
     xbmc.executebuiltin("Container.SetViewMode(504)")
 
@@ -413,7 +417,7 @@ def get_params():
                                 
         return param
 
-def addMediafileLink(name,url,plot,iconimage,genre,originalairingdate,airingdate,showtitle,mediafileid,airingid,seasonnum,episodenum,studio,isfavorite):
+def addMediafileLink(name,url,plot,iconimage,genre,originalairingdate,airingdate,showtitle,mediafileid,airingid,seasonnum,episodenum,studio,isfavorite,iswatched):
         ok=True
         liz=xbmcgui.ListItem(name)
         scriptToRun = "special://home/addons/plugin.video.sagetv/contextmenuactions.py"
@@ -432,7 +436,11 @@ def addMediafileLink(name,url,plot,iconimage,genre,originalairingdate,airingdate
             liz.addContextMenuItems([(__language__(21016), 'XBMC.RunScript(' + scriptToRun + ', ' + actionDelete + ')'), (__language__(21018), 'XBMC.RunScript(' + scriptToRun + ', ' + actionRemoveFavorite + ')')], True)
           liz.addContextMenuItems([(__language__(21016), 'XBMC.RunScript(' + scriptToRun + ', ' + actionDelete + ')')], True)
 
-        liz.setInfo( type="Video", infoLabels={ "Title": name, "Plot": plot, "Genre": genre, "date": airingdate, "premiered": originalairingdate, "aired": originalairingdate, "TVShowTitle": showtitle, "season": seasonnum, "episode": episodenum, "studio": studio } )
+        if(iswatched):
+            liz.setInfo( type="Video", infoLabels={ "Title": name, "Plot": plot, "Genre": genre, "date": airingdate, "premiered": originalairingdate, "aired": originalairingdate, "TVShowTitle": showtitle, "season": seasonnum, "episode": episodenum, "studio": studio, "overlay": 7, "watched": True } )
+        else:
+            liz.setInfo( type="Video", infoLabels={ "Title": name, "Plot": plot, "Genre": genre, "date": airingdate, "premiered": originalairingdate, "aired": originalairingdate, "TVShowTitle": showtitle, "season": seasonnum, "episode": episodenum, "studio": studio, "overlay": 6, "watched": False } )
+
         liz.setIconImage(iconimage)
         liz.setThumbnailImage(iconimage)
         ok=xbmcplugin.addDirectoryItem(handle=int(sys.argv[1]),url=url,listitem=liz,isFolder=False)
