@@ -1,3 +1,7 @@
+[B]Version 1.2.2 (Sep 20, 2012)[/B]
+- Fixed issue with live TV playing back w/ UNC path
+- Watched status is pulled from SageTV and set in XBMC (only one way for now... watching a show in XBMC does not sync the status back to SageTV)
+
 [B]Version 1.2.1 (Sep 20, 2012)[/B]
 - Localized all GUI strings
 
